fixed issues with margin and padding on mobile view

--- a/penters_pizzeria/styles/style.css
+++ b/penters_pizzeria/styles/style.css
@@ -408,6 +408,10 @@ to be above this section!!*/
         margin-top: 0;
     }
 
+    #hero-box {
+        margin-bottom: -6px;
+    }
+
     #hero p {
         font-size: 22pt;
     }
@@ -467,6 +471,8 @@ to be above this section!!*/
 
 .about-body-title{
     margin: 0;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .about-grid p:nth-of-type(1), .about-grid p:nth-of-type(2) { 
